fix zoom text on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ p{
 
 h1{
     font-size: 225%; 
+    
 }
 
 
@@ -97,6 +98,7 @@ a {
 }
 
 /*hero text zoom*/
+
 #hero-text{    
     font-size: 225%;
     position: absolute;
@@ -127,7 +129,7 @@ a {
     padding: 10px;
   /*float: left;
     width: 66%; */
-    background-color: white; 
+    background-color: ivory; 
    /* box-shadow: 5px 10px #dcc7ac;
     background-color: rgba(67, 82, 86, .7); */
 }
@@ -163,7 +165,7 @@ a {
 /* footer */
 
 footer{
-    height: 150px;
+    height: 100px;
 
     }
 
@@ -175,8 +177,10 @@ footer{
     display: inline;
 }
 
+
+
 .social-networks i{
-    font-size: 160%;
+    font-size: 150%;
     margin: 1%;
     padding: 5%;
     color: #3a3a3a;
@@ -293,4 +297,8 @@ footer{
         width: 100%;
       }
 
+      /* remove the welcome text on smaller devices*/
+      #hero-text {
+        visibility: hidden;
+      }
 }
